--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/inicio_coordinador_zonal.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/inicio_coordinador_zonal.html
@@ -124,7 +124,7 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="inventario_producto.html" class="menu-link">
+                    <a href="productos_zonal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-package"></i>
                         <div data-i18n="Productos">Productos</div>
                     </a>
