--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/productos_zonal.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/productos_zonal.html
@@ -103,8 +103,6 @@
             border-collapse: separate; /* Evita que las celdas estén pegadas entre sí */
             border-spacing: 0 10px; /* Espaciado entre las filas */
         }
-
-
     </style>
 
 </head>
@@ -118,19 +116,18 @@
 
             <!-- Contenedor para la imagen centrada -->
             <div style="text-align: center;">
-                <img src="logo.png" alt="Imagen" style="width: 150px; margin-bottom: -45px;">
+                <img src="logo.png" alt="Imagen" style="width: 150px; margin-bottom: -70px; margin-top: -20px">
             </div>
 
             <div class="app-brand demo" style="text-align: center;">
-                <a href="inicio_coordinador_zonal.html" class="app-brand-link"> <!--Aca colocar el html de inicio del flujo correspondiente-->
-                    <span class="app-brand-text demo menu-text fw-bolder" style="font-family: 'Poppins', sans-serif; color: #7367F0; padding-left: 15px;">TelExpress</span> <!-- Añadimos padding para ajustar a la derecha -->
+                <a href="inicio_coordinador_zonal.html" class="app-brand-link">
+                    <span class="app-brand-text demo menu-text fw-bolder" style="font-family: 'Poppins', sans-serif; color: #7367F0; padding-left: 15px;">TelExpress</span>
                 </a>
 
                 <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
                     <i class="bx bx-chevron-left bx-sm align-middle"></i>
                 </a>
             </div>
-            <!-- Contenedor para la imagen centrada -->
 
             <div class="menu-inner-shadow"></div> <!-- efecto visual de sombra dentro del menu -->
 
@@ -159,13 +156,13 @@
 
                 </li>
                 <li class="menu-item">
-                    <a href="inicio_zonal.html" class="menu-link">
+                    <a href="importacion_zonal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-import"></i>
                         <div data-i18n="Importaciones">Importaciones</div>
                     </a>
                 </li>
                 <li class="menu-item active">
-                    <a href="inventario_producto.html" class="menu-link">
+                    <a href="productos_zonal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-package"></i>
                         <div data-i18n="Productos">Productos</div>
                     </a>
