--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/dashboard_zonal.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/dashboard_zonal.html
@@ -27,7 +27,7 @@
             content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>Inicio- CoordinadorZonal</title>
+    <title>Dashboard- CoordinadorZonal</title>
 
     <meta name="description" content="" />
 
@@ -97,16 +97,16 @@
 
             <ul class="menu-inner py-1">
                 <!-- Dashboard -->
-                <li class="menu-item active">
-                    <a href="index.html" class="menu-link">
+                <li class="menu-item">
+                    <a href="inicio_coordinador_zonal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-home-circle"></i>
                         <div data-i18n="Inicio">Inicio</div>
                     </a>
                 </li>
 
                 <!-- Mis pedidos -->
-                <li class="menu-item">
-                    <a href="javascript:void(0);" class="menu-link" >
+                <li class="menu-item active">
+                    <a href="dashboard_zonal.html" class="menu-link" >
                         <i class="menu-icon tf-icons bx bx-grid-alt"></i>
                         <div data-i18n="Dashboard">Dashboard</div>
                     </a>
@@ -120,13 +120,13 @@
 
                 </li>
                 <li class="menu-item">
-                    <a href="javascript:void(0);" class="menu-link">
+                    <a href="importacion_zonal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-import"></i>
                         <div data-i18n="Importaciones">Importaciones</div>
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="javascript:void(0);" class="menu-link">
+                    <a href="productos_zonal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-package"></i>
                         <div data-i18n="Productos">Productos</div>
                     </a>
@@ -308,6 +308,7 @@
 
         </div>
         <!-- Content wrapper -->
+
     </div>
     <!-- / Layout page -->
 </div>
