--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/inicio_coordinador_zonal.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/inicio_coordinador_zonal.html
@@ -91,13 +91,14 @@
                     <i class="bx bx-chevron-left bx-sm align-middle"></i>
                 </a>
             </div>
+            <!-- Contenedor para la imagen centrada -->
 
             <div class="menu-inner-shadow"></div>
 
             <ul class="menu-inner py-1">
                 <!-- Dashboard -->
                 <li class="menu-item active">
-                    <a href="index.html" class="menu-link">
+                    <a href="inicio_coordinador_zonal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-home-circle"></i>
                         <div data-i18n="Inicio">Inicio</div>
                     </a>
@@ -105,7 +106,7 @@
 
                 <!-- Mis pedidos -->
                 <li class="menu-item">
-                    <a href="javascript:void(0);" class="menu-link" >
+                    <a href="dashboard_zonal.html" class="menu-link" >
                         <i class="menu-icon tf-icons bx bx-grid-alt"></i>
                         <div data-i18n="Dashboard">Dashboard</div>
                     </a>
@@ -118,7 +119,7 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="javascript:void(0);" class="menu-link">
+                    <a href="importacion_zonal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-import"></i>
                         <div data-i18n="Importaciones">Importaciones</div>
                     </a>
