agente,importar y productos listo

--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/crear_agente_zonal.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/crear_agente_zonal.html
@@ -97,27 +97,27 @@
 
                 <!-- Dashboard -->
                 <li class="menu-item">
-                    <a href="inicio_zonal.html" class="menu-link" >
+                    <a href="dashboard_zonal.html" class="menu-link" >
                         <i class="menu-icon tf-icons bx bx-grid-alt"></i>
                         <div data-i18n="Dashboard">Dashboard</div>
                     </a>
                 </li>
                 <!--Crear Agente -->
                 <li class="menu-item active">
-                    <a href="inicio_zonal.html" class="menu-link">
+                    <a href="crear_agente_zonal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-user-plus"></i>
                         <div data-i18n="Crear agente">Crear agente</div>
                     </a>
 
                 </li>
                 <li class="menu-item">
-                    <a href="importacio_zonal.html" class="menu-link">
+                    <a href="importacion_zonal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-import"></i>
                         <div data-i18n="Importaciones">Importaciones</div>
                     </a>
                 </li>
                 <li class="menu-item ">
-                    <a href="inventario_producto.html" class="menu-link">
+                    <a href="productos_zonal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-package"></i>
                         <div data-i18n="Productos">Productos</div>
                     </a>
@@ -125,7 +125,7 @@
 
                 <li class="menu-item ruedita" >
                     <a
-                            href="inicio_zonal.html"
+                            href="inicio_coordinador_zonal.html"
                             target="_blank"
                             class="menu-link"
                     >
