--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/productos_zonal.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/productos_zonal.html
@@ -142,14 +142,14 @@
 
                 <!-- Dashboard -->
                 <li class="menu-item">
-                    <a href="inicio_zonal.html" class="menu-link" >
+                    <a href="dashboard_zonal.html" class="menu-link" >
                         <i class="menu-icon tf-icons bx bx-grid-alt"></i>
                         <div data-i18n="Dashboard">Dashboard</div>
                     </a>
                 </li>
                 <!--Crear Agente -->
                 <li class="menu-item">
-                    <a href="inicio_zonal.html" class="menu-link">
+                    <a href="crear_agente_zonal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-user-plus"></i>
                         <div data-i18n="Crear agente">Crear agente</div>
                     </a>
@@ -170,7 +170,7 @@
 
                 <li class="menu-item ruedita" >
                     <a
-                            href="inicio_zonal.html"
+                            href="inicio_coordinador_zonal.html"
                             target="_blank"
                             class="menu-link"
                     >
@@ -345,12 +345,12 @@
                         <table class="table" id="miTable" style="margin-top: 20px;">
                             <thead class="table-light">
                             <tr>
-                                <th style="color: #00C8E5;">N°</th>
-                                <th style="color: #00C8E5;">Productos</th>
-                                <th style="color: #00C8E5;">Categoria</th>
-                                <th style="color: #00C8E5;">Cantidad</th>
-                                <th style="color: #00C8E5;">Solicitar Reposición</th>
-                                <th style="color: #00C8E5;">Fecha de arribo</th>
+                                <th style="color: #058ea3;">N°</th>
+                                <th style="color: #058ea3;">Productos</th>
+                                <th style="color: #058ea3;">Categoria</th>
+                                <th style="color: #058ea3;">Cantidad</th>
+                                <th style="color: #058ea3;">Solicitar Reposición</th>
+                                <th style="color: #058ea3;">Fecha de arribo</th>
                             </tr>
                             </thead>
                             <tbody class="table-border-bottom-0">
