--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/crear_agente_zonal.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/crear_agente_zonal.html
@@ -75,7 +75,7 @@
 
             <div class="app-brand demo" style="text-align: center;">
                 <a href="inicio_coordinador_zonal.html" class="app-brand-link"> <!--Aca colocar el html de inicio del flujo correspondiente-->
-                    <span class="app-brand-text demo menu-text fw-bolder" style="font-family: 'Poppins', sans-serif; color: #7367F0; padding-left: 15px;">TelExpress</span> <!-- Añadimos padding para ajustar a la derecha -->
+                    <span class="app-brand-text demo menu-text fw-bolder desing-name" >TelExpress</span> <!-- Añadimos padding para ajustar a la derecha -->
                 </a>
 
                 <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
