--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/importacion_zonal.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/importacion_zonal.html
@@ -267,7 +267,7 @@
                         <li class="nav-item navbar-dropdown dropdown-user dropdown mx-3">
                             <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
                                 <div class="avatar avatar-online">
-                                    <img src="../../assets/img/icons/unicons/user.png" alt class="w-px-40 h-auto rounded-circle" />
+                                    <img src="../../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
                                 </div>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
