--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/inicio_coordinador_zonal.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/inicio_coordinador_zonal.html
@@ -24,9 +24,10 @@
     <meta charset="utf-8" />
     <meta
             name="viewport"
-            content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+            content="width=device-width, initial-scale=1.0"
+            
     />
-
+<!-- content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"-->
     <title>Inicio- CoordinadorZonal</title>
 
     <meta name="description" content="" />
