--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/productos_zonal.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/productos_zonal.html
@@ -121,7 +121,7 @@
 
             <div class="app-brand demo" style="text-align: center;">
                 <a href="inicio_coordinador_zonal.html" class="app-brand-link">
-                    <span class="app-brand-text demo menu-text fw-bolder" style="font-family: 'Poppins', sans-serif; color: #7367F0; padding-left: 15px;">TelExpress</span>
+                    <span class="app-brand-text demo menu-text fw-bolder desing-name" >TelExpress</span>
                 </a>
 
                 <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
