finalizado coordinadoro zonal

--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/productos_zonal.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/productos_zonal.html
@@ -69,7 +69,7 @@
             border-radius: 4px;
             border: 1px solid #ddd;
             background: #f5f5f5;
-            color: #333;
+            color: #8A9BAE;
         }
 
         .dataTables_wrapper .dataTables_paginate .paginate_button.current {
@@ -149,9 +149,9 @@
                 </li>
                 <!--Crear Agente -->
                 <li class="menu-item">
-                    <a href="crear_agente_zonal.html" class="menu-link">
+                    <a href="listaagente_zonal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-user-plus"></i>
-                        <div data-i18n="Crear agente">Crear agente</div>
+                        <div data-i18n="Agentes">Agentes</div>
                     </a>
 
                 </li>
