--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/productos_zonal.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/productos_zonal.html
@@ -365,7 +365,7 @@
                                             class="btn btn-primary"
                                             data-bs-toggle="modal"
                                             data-bs-target="#modalCenter"
-                                            style="background-color: #00C8E5; border-color: #00C8E5;"
+                                            style="background-color: #00b1cc; border-color: #00C8E5;"
                                     >
                                         Solicitar
                                     </button>
@@ -378,7 +378,8 @@
                                             data-bs-toggle="modal"
                                             data-bs-target="#fechaModal"
                                     >
-                                        <i class="tf-icons bx bx-tsk"></i>
+                                    <img src="../../assets/img/icons/unicons/editarcalendario.png" alt="Imagen Modal" style="width: 24px; height: 24px;">
+                                
                                     </button>
                                 </td>
                             </tr>
@@ -393,7 +394,7 @@
                                             class="btn btn-primary"
                                             data-bs-toggle="modal"
                                             data-bs-target="#modalCenter"
-                                            style="background-color: #00C8E5; border-color: #00C8E5;"
+                                            style="background-color: #00b1cc; border-color: #00C8E5;"
                                     >
                                         Solicitar
                                     </button>
@@ -405,7 +406,7 @@
                                             data-bs-toggle="modal"
                                             data-bs-target="#fechaModal"
                                     >
-                                        <i class="tf-icons bx bx-tsk"></i>
+                                    <img src="../../assets/img/icons/unicons/editarcalendario.png" alt="Imagen Modal" style="width: 24px; height: 24px;">
                                     </button>
                                 </td>
                             </tr>
@@ -420,7 +421,7 @@
                                             class="btn btn-primary"
                                             data-bs-toggle="modal"
                                             data-bs-target="#modalCenter"
-                                            style="background-color: #00C8E5; border-color: #00C8E5;"
+                                            style="background-color: #00b1cc; border-color: #00C8E5;"
                                     >
                                         Solicitar
                                     </button>
@@ -432,7 +433,7 @@
                                             data-bs-toggle="modal"
                                             data-bs-target="#fechaModal"
                                     >
-                                        <i class="tf-icons bx bx-tsk"></i>
+                                    <img src="../../assets/img/icons/unicons/editarcalendario.png" alt="Imagen Modal" style="width: 24px; height: 24px;">
                                     </button>
                                 </td>
                             </tr>
@@ -449,7 +450,7 @@
                                             class="btn btn-primary"
                                             data-bs-toggle="modal"
                                             data-bs-target="#modalCenter"
-                                            style="background-color: #00C8E5; border-color: #00C8E5;"
+                                            style="background-color: #00b1cc; border-color: #00C8E5;"
                                     >
                                         Solicitar
                                     </button>
@@ -461,7 +462,7 @@
                                             data-bs-toggle="modal"
                                             data-bs-target="#fechaModal"
                                     >
-                                        <i class="tf-icons bx bx-tsk"></i>
+                                    <img src="../../assets/img/icons/unicons/editarcalendario.png" alt="Imagen Modal" style="width: 24px; height: 24px;">
                                     </button>
                                 </td>
                             </tr>
@@ -482,7 +483,7 @@
     $(document).ready(function() {
         $('#miTable').DataTable({
             "pagingType": "full_numbers", // Esto muestra los números de página completos
-            "pageLength":5,
+            "pageLength":3,
             "language": {
                 "paginate": {
                     "first": "",
