--- a/HTML Modelo/sneat-1.0.0/html/SuperAdmin/dashboard_superadmin.html
+++ b/HTML Modelo/sneat-1.0.0/html/SuperAdmin/dashboard_superadmin.html
@@ -478,7 +478,7 @@
                                     <!--/ Usuarios -->
 
                                     <!-- Agentes -->
-                                    <div class=" order-2 ">
+                                    <div class=" order-2 " style="margin-top: -31px">
                                         <div class="card h-100">
                                             <div class="card-header d-flex align-items-center justify-content-between pb-0">
                                                 <div class="card-title mb-0">
