--- a/HTML Modelo/sneat-1.0.0/html/SuperAdmin/inventario_superadmin.html
+++ b/HTML Modelo/sneat-1.0.0/html/SuperAdmin/inventario_superadmin.html
@@ -220,7 +220,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <!-- Ejemplo de filas de la tabla -->
+                    <!-- Producto A (ya existente) -->
                     <tr>
                       <td>1</td>
                       <td>Producto A</td>
@@ -240,8 +240,71 @@
                         </button>
                       </td>
                     </tr>
-                    <!-- Más filas... -->
+
+                    <!-- Producto B -->
+                    <tr>
+                      <td>2</td>
+                      <td>Producto B</td>
+                      <td>Categoría 2</td>
+                      <td>30</td>
+                      <td>Descripción B</td>
+                      <td>$150</td>
+                      <td>$12</td>
+                      <td>Proveedor 2</td>
+                      <td>Zona 2</td>
+                      <td>
+                        <button class="btn btn-sm btn-primary">
+                          <i class="bx bx-edit-alt"></i>
+                        </button>
+                        <button class="btn btn-sm btn-danger">
+                          <i class="bx bx-trash"></i>
+                        </button>
+                      </td>
+                    </tr>
+
+                    <!-- Producto C -->
+                    <tr>
+                      <td>3</td>
+                      <td>Producto C</td>
+                      <td>Categoría 3</td>
+                      <td>70</td>
+                      <td>Descripción C</td>
+                      <td>$200</td>
+                      <td>$15</td>
+                      <td>Proveedor 3</td>
+                      <td>Zona 3</td>
+                      <td>
+                        <button class="btn btn-sm btn-primary">
+                          <i class="bx bx-edit-alt"></i>
+                        </button>
+                        <button class="btn btn-sm btn-danger">
+                          <i class="bx bx-trash"></i>
+                        </button>
+                      </td>
+                    </tr>
+
+                    <!-- Producto D -->
+                    <tr>
+                      <td>4</td>
+                      <td>Producto D</td>
+                      <td>Categoría 4</td>
+                      <td>20</td>
+                      <td>Descripción D</td>
+                      <td>$80</td>
+                      <td>$8</td>
+                      <td>Proveedor 4</td>
+                      <td>Zona 4</td>
+                      <td>
+                        <button class="btn btn-sm btn-primary">
+                          <i class="bx bx-edit-alt"></i>
+                        </button>
+                        <button class="btn btn-sm btn-danger">
+                          <i class="bx bx-trash"></i>
+                        </button>
+                      </td>
+                    </tr>
                     </tbody>
+
                   </table>
                 </div>
 
