--- a/HTML Modelo/sneat-1.0.0/html/SuperAdmin/inventario_superadmin.html
+++ b/HTML Modelo/sneat-1.0.0/html/SuperAdmin/inventario_superadmin.html
@@ -245,6 +245,28 @@
                         </button>
                       </td>
                     </tr>
+
+
+                    <!-- Producto E -->
+                    <tr>
+                      <td>4</td>
+                      <td>Producto E</td>
+                      <td>Categoría 5</td>
+                      <td>268</td>
+                      <td>Descripción E</td>
+                      <td>$200</td>
+                      <td>$10</td>
+                      <td>Proveedor 5</td>
+                      <td>Zona 5</td>
+                      <td>
+                        <button class="btn btn-sm btn-primary">
+                          <i class="bx bx-edit-alt"></i>
+                        </button>
+                        <button class="btn btn-sm btn-danger">
+                          <i class="bx bx-trash"></i>
+                        </button>
+                      </td>
+                    </tr>
                     </tbody>
 
                   </table>
