--- a/HTML Modelo/sneat-1.0.0/html/Agente/inicio_agente.html
+++ b/HTML Modelo/sneat-1.0.0/html/Agente/inicio_agente.html
@@ -249,7 +249,7 @@
               </a>
               <ul class="dropdown-menu dropdown-menu-end">
                 <li>
-                  <a class="dropdown-item" href="#">
+                  <a class="dropdown-item" href="bla2.html">
                     <div class="d-flex">
                       <div class="flex-shrink-0 me-3">
                         <div class="avatar avatar-online">
@@ -257,6 +257,7 @@
                         </div>
                       </div>
                       <div class="flex-grow-1">
+                        
                         <span class="fw-semibold d-block">Juanito Jun</span>
                         <small class="text-muted">Agente</small>
                       </div>
