--- a/HTML Modelo/sneat-1.0.0/html/Agente/primer_inicio.html
+++ b/HTML Modelo/sneat-1.0.0/html/Agente/primer_inicio.html
@@ -159,7 +159,7 @@
                     </div>
                   </div>
                 <div class="mb-3">
-                  <button class="btn btn-primary d-grid w-100" type="submit">REGISTRARSE</button>
+                  <a href="inicio_agente.html" class="btn btn-primary d-grid w-100" type="submit">REGISTRARSE</a>
                 </div>
               </form>
             </div>
