--- a/HTML Modelo/sneat-1.0.0/html/Agente/inicio_agente.html
+++ b/HTML Modelo/sneat-1.0.0/html/Agente/inicio_agente.html
@@ -31,6 +31,8 @@
           rel="stylesheet"
   />
 
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
   <!-- Icons. Uncomment required icon fonts -->
   <link rel="stylesheet" href="../../assets/vendor/fonts/boxicons.css" />
 
@@ -300,10 +302,40 @@
 
       <!-- Content wrapper -->
       <div class="content-wrapper">
+        <!-- Aquí se agrega el contenido central -->
+        <div class="container-xxl flex-grow-1 container-p-y">
+          <div class="card">
+            <div class="card-body">
 
-        <div class="content-backdrop fade"></div>
+              <h4 style="font-family: 'Poppins', sans-serif; color: #7367F0; font-weight: bold; padding-top: 1rem; padding-bottom: 1rem; margin-bottom: 1rem; text-align: center; font-size: 40px;">
+                ¡Bienvenido agente!
+              </h4>
+
+              <!-- Añadimos margen superior al segundo h4 -->
+              <h4 class="mb-2" style="margin-top: 20px; margin-bottom: -20px; font-size: 20px; font-family: 'Poppins', sans-serif; font-weight: 100">
+                En esta sección, podrás ver algunas funciones que puedes realizar como agente.
+              </h4>
+
+              <!-- Contenedor flexbox para alinear el texto y la imagen -->
+              <div style="display: flex; justify-content: space-between; align-items: center; margin-top: -60px">
+                <!-- Banner con el texto de funciones a la izquierda -->
+                <div style="background-color: #6DC8C2; padding: 20px; border-radius: 10px; width: 60%;">
+                  <p style="font-size:20px; color: white; font-family: 'Poppins', sans-serif; font-weight: 100;">
+                    Funciones:
+                    <br>1. Crear agentes de compra
+                    <br>2. Crear y actualizar fechas de descarga de las importaciones
+                    <br>3. Solicitar reposición para el inventario
+                  </p>
+                </div>
+                <!-- Imagen alineada a la derecha -->
+                <img src="inicio_agente.png" alt="Imagen" style="width: 400px; margin-left: 20px;">
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <!-- Content wrapper -->
+      <!-- /Aquí termina el contenido central -->
+
     </div>
     <!-- / Layout page -->
   </div>
