--- a/HTML Modelo/sneat-1.0.0/html/Agente/inicio_agente.html
+++ b/HTML Modelo/sneat-1.0.0/html/Agente/inicio_agente.html
@@ -249,7 +249,7 @@
               </a>
               <ul class="dropdown-menu dropdown-menu-end">
                 <li>
-                  <a class="dropdown-item" href="bla2.html">
+                  <a class="dropdown-item" href="perfil_agente.html">
                     <div class="d-flex">
                       <div class="flex-shrink-0 me-3">
                         <div class="avatar avatar-online">
