--- a/HTML Modelo/sneat-1.0.0/html/Agente/perfil_agente.html
+++ b/HTML Modelo/sneat-1.0.0/html/Agente/perfil_agente.html
@@ -42,7 +42,7 @@
           
                 <div class="app-brand demo" style="text-align: center;">
                   <a href="inicio_agente.html" class="app-brand-link">
-                    <span class="app-brand-text demo menu-text fw-bolder" style="font-family: 'Poppins', sans-serif; color: #7367F0; padding-left: 15px;">TelExpress</span>
+                    <span class="app-brand-text demo menu-text fw-bolder" style="font-family: 'Poppins', sans-serif; color: #ff8c00; padding-left: 15px;">TelExpress</span>
                   </a>
           
                   <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
@@ -285,15 +285,15 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="lastName" class="form-label">Apellidos:</label>
-                                    <input type="text" class="form-control" id="lastName" value="Yarlequé Santivañez" readonly>
+                                    <input type="text" class="form-control" id="lastName" value="Yu Yon" readonly>
                                 </div>
                                 <div class="mb-3">
                                     <label for="codigo" class="form-label">Código de despachador:</label>
                                     <input type="text" class="form-control" id="codigo" value="0001203" readonly>
                                 </div>
 
-                                <div class="d-flex justify-content-between mt-4">
-                                    <a href="../Sistema/cambio_contraseña.html" class="btn btn-primary">Cambiar contraseña</button>
+                                <div class="d-flex justify-content-center mt-4">
+                                    <!--<a href="../Sistema/cambio_contraseña.html" class="btn btn-primary">Cambiar contraseña</button>-->
                                     <a href="inicio_agente.html" class="btn btn-danger">Regresar</a>
                                 </div>
                             </div>
