--- a/HTML Modelo/sneat-1.0.0/html/Agente/inicio_agente.html
+++ b/HTML Modelo/sneat-1.0.0/html/Agente/inicio_agente.html
@@ -270,7 +270,7 @@
                   <div class="dropdown-divider"></div>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../Sistema/cambio_contraseña.html">
+                  <a class="dropdown-item" href="cambio_contra_agente.html">
                     <i class="bx bx-user me-2"></i>
                     <span class="align-middle">Cambio de Contraseña</span>
                   </a>
