--- a/HTML Modelo/sneat-1.0.0/html/Agente/perfil_agente.html
+++ b/HTML Modelo/sneat-1.0.0/html/Agente/perfil_agente.html
@@ -42,7 +42,7 @@
           
                 <div class="app-brand demo" style="text-align: center;">
                   <a href="inicio_agente.html" class="app-brand-link">
-                    <span class="app-brand-text demo menu-text fw-bolder" style="font-family: 'Poppins', sans-serif; color: #ff8c00; padding-left: 15px;">TelExpress</span>
+                    <span class="app-brand-text demo menu-text fw-bolder" style="font-family: 'Poppins', sans-serif; color: #7367F0; padding-left: 15px;">TelExpress</span>
                   </a>
           
                   <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
