modificaciones de inicio

--- a/HTML Modelo/sneat-1.0.0/html/Agente/inicio_agente.html
+++ b/HTML Modelo/sneat-1.0.0/html/Agente/inicio_agente.html
@@ -322,9 +322,10 @@
                 <div style="background-color: #6DC8C2; padding: 20px; border-radius: 10px; width: 60%;">
                   <p style="font-size:20px; color: white; font-family: 'Poppins', sans-serif; font-weight: 100;">
                     Funciones:
-                    <br>1. Crear agentes de compra
-                    <br>2. Crear y actualizar fechas de descarga de las importaciones
-                    <br>3. Solicitar reposición para el inventario
+                    <br>1. Ver lista de todos los usuarios.
+                    <br>2. Poder banear a los usuarios.
+                    <br>3. Chatear con los usuarios
+                    <br>4. Responder dudas de los usuarios
                   </p>
                 </div>
                 <!-- Imagen alineada a la derecha -->
