postular agente (de usuario final)

--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/inicio_usuariofinal.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/inicio_usuariofinal.html
@@ -81,7 +81,7 @@
       <div class="menu-inner-shadow"></div>
 
       <ul class="menu-inner py-1">
-        <!-- Dashboard -->
+        <!-- Barra lateral -->
         <li class="menu-item active">
           <a href="inicio_agente.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-home-circle"></i>
