--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/unete.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/unete.html
@@ -97,8 +97,8 @@
 
             <ul class="menu-inner py-1">
                 <!-- Barra lateral -->
-                <li class="menu-item active">
-                  <a href="inicio_agente.html" class="menu-link">
+                <li class="menu-item">
+                  <a href="inicio_usuariofinal.html" class="menu-link">
                     <i class="menu-icon tf-icons bx bx-home-circle"></i>
                     <div data-i18n="Inicio">Inicio</div>
                   </a>
@@ -134,7 +134,7 @@
                     </a>
                 </li>
         
-                <li class="menu-item">
+                <li class="menu-item active">
                     <a href="unete.html" class="menu-link">
                       <i class="menu-icon tf-icons bx bx-user-plus"></i>
                       <div data-i18n="Unete">Unete al team</div>
