--- a/HTML Modelo/sneat-1.0.0/html/Agente/usuarios_agente.html
+++ b/HTML Modelo/sneat-1.0.0/html/Agente/usuarios_agente.html
@@ -16,12 +16,12 @@
           content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
   />
 
-  <title>Inicio Agente</title>
+  <title>Usuarios Agente</title>
 
   <meta name="description" content="" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="../../assets/img/favicon/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="../../html/Imagenes/logo.png"/>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -103,7 +103,7 @@
               <div data-i18n="Chats">Chats</div>
             </a>
           </li>
-        
+
         <!--
         <li class="menu-header small text-uppercase">
           <span class="menu-header-text">Páginas</span>
@@ -260,7 +260,7 @@
                         </div>
                       </div>
                       <div class="flex-grow-1">
-                        
+
                         <span class="fw-semibold d-block">Juanito Jun</span>
                         <small class="text-muted">Agente</small>
                       </div>
