--- a/HTML Modelo/sneat-1.0.0/html/Agente/chat_agente.html
+++ b/HTML Modelo/sneat-1.0.0/html/Agente/chat_agente.html
@@ -22,6 +22,12 @@
             href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
             rel="stylesheet"
     />
+    <!--BOOTSTRAP Y BOXICONS-->
+    <!-- importante añadir para que funcione las notificaciones y el icono de usuario-->
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
     <style>
         /* Custom styles for status labels */
         .status-label {
@@ -356,8 +362,8 @@
                                 <div class="position-relative">
                                     <div class="bx bx-bell" style="font-size: 26px; color: #7367F0;"></div>
                                     <span class="badge bg-danger rounded-circle position-absolute d-flex justify-content-center align-items-center" style="top: -5px; right: -5px; font-size: 12px; width: 18px; height: 18px;">
-                      5
-                    </span>
+                                      5
+                                    </span>
                                 </div>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
