cambios en agente

--- a/HTML Modelo/sneat-1.0.0/html/Agente/inicio_agente.html
+++ b/HTML Modelo/sneat-1.0.0/html/Agente/inicio_agente.html
@@ -97,7 +97,7 @@
         </li>
 
         <li class="menu-item">
-            <a href="dashboard_superadmin.html" class="menu-link">
+            <a href="chat_agente.html" class="menu-link">
               <i class="menu-icon tf-icons bx bx-chat"></i>
               <div data-i18n="Chats">Chats</div>
             </a>
