--- a/HTML Modelo/sneat-1.0.0/html/Agente/chat_agente.html
+++ b/HTML Modelo/sneat-1.0.0/html/Agente/chat_agente.html
@@ -30,6 +30,21 @@
 
     <style>
         /* Custom styles for status labels */
+        /*titulo de chat*/
+        .chat-header h4 {
+            font-family: 'Poppins', sans-serif;
+            color: #ffffff;
+            padding-left: 15px;
+            font-weight: bolder;
+            font-size: 25px;
+            margin-bottom: -5px;
+        }
+
+        /*menu de contactos en chat*/
+        .chat-sidebar h4{
+            font-family: 'Poppins', sans-serif;
+            font-weight: bolder;
+        }
         .status-label {
             display: inline-block;
             padding: 5px 10px;
@@ -172,7 +187,7 @@
 
         .chat-header {
             padding: 20px;
-            background-color: #007bff;
+            background-color: #ffb436;
             color: white;
             text-align: center;
             border-bottom: 1px solid #ddd;
@@ -222,7 +237,7 @@
         }
 
         #send-btn {
-            background-color: #007bff;
+            background-color: #0ccd90;
             color: white;
             border: none;
             padding: 10px;
@@ -490,11 +505,11 @@
                         <!-- Sidebar for Contacts -->
                         <div class="chat-sidebar">
                             <h4>Contactos</h4>
-                            <div class="contact" onclick="selectContact('AgenteO1')">AgenteO1</div>
-                            <div class="contact" onclick="selectContact('AgenteO2')">AgenteO2</div>
-                            <div class="contact" onclick="selectContact('AgenteO3')">AgenteO3</div>
-                            <div class="contact" onclick="selectContact('AgenteO4')">AgenteO4</div>
-                            <div class="contact" onclick="selectContact('ChatBot')">ChatBot</div>
+                            <div class="contact" onclick="selectContact('UsuarioO1')">UsuarioO1</div>
+                            <div class="contact" onclick="selectContact('UsuarioO2')">UsuarioO2</div>
+                            <div class="contact" onclick="selectContact('UsuarioO3')">UsuarioO3</div>
+                            <div class="contact" onclick="selectContact('UsuarioO4')">UsuarioO4</div>
+                            <div class="contact" onclick="selectContact('Usuario05')">Usuario05</div>
                         </div>
 
                         <!-- Main Chat Area -->
@@ -507,7 +522,7 @@
                             </div>
                             <div class="chat-input-area">
                                 <input type="text" id="chat-input" placeholder="Type your message here...">
-                                <button id="send-btn">Send</button>
+                                <button id="send-btn">Enviar</button>
                             </div>
                         </div>
                     </div>
