--- a/HTML Modelo/sneat-1.0.0/html/Agente/usuarios_agente.html
+++ b/HTML Modelo/sneat-1.0.0/html/Agente/usuarios_agente.html
@@ -98,7 +98,7 @@
         </li>
 
         <li class="menu-item">
-            <a href="dashboard_superadmin.html" class="menu-link">
+            <a href="chat_agente.html" class="menu-link">
               <i class="menu-icon tf-icons bx bx-chat"></i>
               <div data-i18n="Chats">Chats</div>
             </a>
@@ -307,7 +307,11 @@
         <div class="container-xxl flex-grow-1 container-p-y">
           <div class="card">
             <div class="card-body">
-
+              <!-- Search bar with button (only visual) -->
+              <div class="p-3 d-flex">
+                <input type="text" id="searchInput" class="form-control me-2" placeholder="Buscar por nombre o apellido...">
+                <button id="searchBtn" class="btn btn-primary">Buscar</button>
+              </div>
               <!-- TABLA -->
               <div class="card">
                 <h5 class="card-header">Lista de usuarios</h5>
