--- a/HTML Modelo/sneat-1.0.0/html/Agente/ordenes_en_progreso.html
+++ b/HTML Modelo/sneat-1.0.0/html/Agente/ordenes_en_progreso.html
@@ -52,6 +52,9 @@
   <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
   <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
   <script src="../../assets/js/config.js"></script>
+  <!--TelExpress fuente de letra-->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <!-- Layout wrapper -->
@@ -80,7 +83,7 @@
 
       <ul class="menu-inner py-1">
         <!-- Dashboard -->
-        <li class="menu-item active">
+        <li class="menu-item ">
           <a href="inicio_agente.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-home-circle"></i>
             <div data-i18n="Inicio">Inicio</div>
@@ -88,14 +91,14 @@
         </li>
 
         <li class="menu-item">
-          <a href="dashboard_superadmin.html" class="menu-link">
+          <a href="usuarios_agente.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-user"></i>
             <div data-i18n="ListaDeUsuarios">Lista de usuarios</div>
           </a>
         </li>
 
         <li class="menu-item">
-          <a href="dashboard_superadmin.html" class="menu-link">
+          <a href="chat_agente.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-chat"></i>
             <div data-i18n="Chats">Chats</div>
           </a>
@@ -105,7 +108,7 @@
         <li class="menu-header small text-uppercase">
           <span class="menu-header-text">Páginas</span>
         </li>-->
-        <li class="menu-item">
+        <li class="menu-item active">
           <a href="javascript:void(0);" class="menu-link menu-toggle">
             <i class="menu-icon tf-icons bx bx-cart-alt"></i>
             <div data-i18n="Órdenes">Órdenes</div>
@@ -126,7 +129,7 @@
                 <div data-i18n="OrdenesPendientes">Órdenes pendientes</div>
               </a>
             </li>
-            <li class="menu-item">
+            <li class="menu-item active">
               <a href="ordenes_en_progreso.html" class="menu-link">
                 <div data-i18n="OrdenesEnProgreso">Órdenes en progreso</div>
               </a>
@@ -142,7 +145,7 @@
         </li>
 
         <li class="menu-item">
-          <a href="inventario_superadmin.html" class="menu-link">
+          <a href="usuarios_baneados.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-block"></i>
             <div data-i18n="UsuariosBaneados">Usuarios baneados</div>
           </a>
@@ -327,10 +330,11 @@
                       <td>USD</td>
                       <td>$150</td>
                       <td>Aéreo</td>
-                      <td><span class="badge bg-label-primary">En Proceso</span></td>
+                      <td>
+                        <span class="badge bg-label-primary">En Proceso</span>
+                      </td>
                       <td>2024-09-01</td>
                     </tr>
-
                     <!-- Orden 2 -->
                     <tr>
                       <td>2</td>
@@ -338,8 +342,8 @@
                       <td>EUR</td>
                       <td>€200</td>
                       <td>Marítimo</td>
-                      <td><span class="badge bg-label-primary">En Proceso</span></td>
-                      <td>2024-09-02</td>
+                      <td><span class="badge bg-label-dark">Arribo al País</span></td>
+                      <td>2024-08-30</td>
                     </tr>
 
                     <!-- Orden 3 -->
@@ -350,7 +354,7 @@
                       <td>$5000</td>
                       <td>Terrestre</td>
                       <td><span class="badge bg-label-primary">En Proceso</span></td>
-                      <td>2024-09-03</td>
+                      <td>2024-09-02</td>
                     </tr>
 
                     <!-- Orden 4 -->
@@ -360,8 +364,8 @@
                       <td>USD</td>
                       <td>$800</td>
                       <td>Aéreo</td>
-                      <td><span class="badge bg-label-primary">En Proceso</span></td>
-                      <td>2024-09-04</td>
+                      <td><span class="badge bg-label-dark">Arribo al País</span></td>
+                      <td>2024-09-03</td>
                     </tr>
 
                     <!-- Orden 5 -->
@@ -371,8 +375,8 @@
                       <td>EUR</td>
                       <td>€300</td>
                       <td>Marítimo</td>
-                      <td><span class="badge bg-label-primary">En Proceso</span></td>
-                      <td>2024-09-05</td>
+                      <td><span class="badge bg-label-secondary">En Aduanas</span></td>
+                      <td>2024-08-29</td>
                     </tr>
 
                     <!-- Orden 6 -->
@@ -382,8 +386,8 @@
                       <td>MXN</td>
                       <td>$7000</td>
                       <td>Terrestre</td>
-                      <td><span class="badge bg-label-primary">En Proceso</span></td>
-                      <td>2024-09-06</td>
+                      <td><span class="badge bg-label-info">En Ruta</span></td>
+                      <td>2024-09-04</td>
                     </tr>
 
                     <!-- Orden 7 -->
@@ -394,7 +398,7 @@
                       <td>$600</td>
                       <td>Aéreo</td>
                       <td><span class="badge bg-label-primary">En Proceso</span></td>
-                      <td>2024-09-07</td>
+                      <td>2024-09-05</td>
                     </tr>
 
                     <!-- Orden 8 -->
@@ -404,8 +408,8 @@
                       <td>EUR</td>
                       <td>€450</td>
                       <td>Marítimo</td>
-                      <td><span class="badge bg-label-primary">En Proceso</span></td>
-                      <td>2024-09-08</td>
+                      <td><span class="badge bg-label-dark">Arribo al País</span></td>
+                      <td>2024-09-06</td>
                     </tr>
 
                     <!-- Orden 9 -->
@@ -416,7 +420,7 @@
                       <td>$4000</td>
                       <td>Terrestre</td>
                       <td><span class="badge bg-label-primary">En Proceso</span></td>
-                      <td>2024-09-09</td>
+                      <td>2024-09-07</td>
                     </tr>
 
                     <!-- Orden 10 -->
@@ -426,8 +430,8 @@
                       <td>USD</td>
                       <td>$1200</td>
                       <td>Aéreo</td>
-                      <td><span class="badge bg-label-primary">En Proceso</span></td>
-                      <td>2024-09-10</td>
+                      <td><span class="badge bg-label-info">En Ruta</span></td>
+                      <td>2024-09-08</td>
                     </tr>
                     </tbody>
                   </table>
@@ -438,7 +442,7 @@
 
                 <!-- Paginación -->
                 <nav aria-label="Page navigation">
-                  <ul class="pagination justify-content-end">
+                  <ul class="pagination justify-content-center">
                     <li class="page-item"><a class="page-link" href="#">1</a></li>
                     <li class="page-item"><a class="page-link" href="#">2</a></li>
                     <li class="page-item"><a class="page-link" href="#">3</a></li>
