--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/detalle_producto.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/detalle_producto.html
@@ -352,8 +352,8 @@
                     ¡La solicitud de reposición se ha realizado con éxito!
                   </div>
 
-                <div class="card">
-                    <div class="d-flex  justify-content-center align-items-center">
+                <div class="card ">
+                    <div class="d-flex  justify-content-center align-items-center card-header">
                         <div class="store-search col-md-6 position-relative" >
                                 
                             <!--<input id="search-input" type="text" class="form-control " placeholder="Buscar productos...">
