--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/chat.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/chat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
-    <title>Detalles de Pedido</title>
+    <title>Chat</title>
     <link rel="stylesheet" href="../../assets/vendor/fonts/boxicons.css" />
     <link rel="stylesheet" href="../../assets/vendor/css/core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" href="../../assets/vendor/css/theme-default.css" class="template-customizer-theme-css" />
@@ -226,13 +226,13 @@
         <!-- Sidebar -->
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
             <div class="app-brand demo" style="text-align: center;">
-                <a href="inicio.html" class="app-brand-link">
+                <a href="inicio_usuariofinal.html" class="app-brand-link">
                     <span class="app-brand-text demo menu-text fw-bolder">TelExpress</span>
                 </a>
             </div>
             <ul class="menu-inner py-1">
                 <li class="menu-item">
-                    <a href="inicio.html" class="menu-link">
+                    <a href="inicio_usuariofinal.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-home-circle"></i>
                         <div>Inicio</div>
                     </a>
@@ -244,7 +244,7 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="tienda.html" class="menu-link">
+                    <a href="lista_productos.html" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-store"></i>
                         <div>Tienda</div>
                     </a>
@@ -269,18 +269,18 @@
                 </li>
                 <li class="menu-item">
                     <a href="faq.html" class="menu-link">
-                        <i class="menu-icon tf-icons bx bx-question-mark"></i>
+                        <i class="menu-icon tf-icons bx bx-support"></i>
                         <div>Ayuda al cliente</div>
                     </a>
                     <ul class="menu-sub">
                         <li class="menu-item">
                             <a href="faqs.html" class="menu-link">
-                                <div>* FAQs</div>
+                                <div>FAQs</div>
                             </a>
                         </li>
                         <li class="menu-item">
                             <a href="resenas.html" class="menu-link">
-                                <div>* Reseñas</div>
+                                <div>Reseñas</div>
                             </a>
                         </li>
                     </ul>
