--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/inicio_usuariofinal.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/inicio_usuariofinal.html
@@ -83,7 +83,7 @@
       <ul class="menu-inner py-1">
         <!-- Barra lateral -->
         <li class="menu-item active">
-          <a href="inicio_agente.html" class="menu-link">
+          <a href="inicio_usuariofinal.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-home-circle"></i>
             <div data-i18n="Inicio">Inicio</div>
           </a>
@@ -97,7 +97,7 @@
         </li>
 
         <li class="menu-item">
-            <a href="tienda.html" class="menu-link">
+            <a href="lista_productos.html" class="menu-link">
               <i class="menu-icon tf-icons bx bx-store"></i>
               <div data-i18n="Tienda">Tienda</div>
             </a>
@@ -128,7 +128,7 @@
 
         <li class="menu-item">
             <a href="javascript:void(0);" class="menu-link menu-toggle">
-                <i class="menu-icon tf-icons bx bx-question-mark"></i>
+              <i class="menu-icon tf-icons bx bx-support"></i>
               <div data-i18n="Ayuda">Ayuda al cliente</div>
             </a>
             <ul class="menu-sub">
