--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/unete.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/unete.html
@@ -112,7 +112,7 @@
                 </li>
         
                 <li class="menu-item">
-                    <a href="tienda.html" class="menu-link">
+                    <a href="lista_productos.html" class="menu-link">
                       <i class="menu-icon tf-icons bx bx-store"></i>
                       <div data-i18n="Tienda">Tienda</div>
                     </a>
@@ -143,7 +143,7 @@
         
                 <li class="menu-item">
                     <a href="javascript:void(0);" class="menu-link menu-toggle">
-                        <i class="menu-icon tf-icons bx bx-question-mark"></i>
+                        <i class="menu-icon tf-icons bx bx-support"></i>
                       <div data-i18n="Ayuda">Ayuda al cliente</div>
                     </a>
                     <ul class="menu-sub">
