update flujo usuario final uu

--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/Foro.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/Foro.html
@@ -152,7 +152,7 @@
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="reseñas.html" class="menu-link">
+                      <a href="resenas.html" class="menu-link">
                         <div data-i18n="Reseñas">Reseñas</div>
                       </a>
                     </li>
