--- a/HTML Modelo/sneat-1.0.0/html/Usuariofinal/lista_productos.html
+++ b/HTML Modelo/sneat-1.0.0/html/Usuariofinal/lista_productos.html
@@ -122,9 +122,9 @@
 
                 <!-- Zona de pagos pendientes -->
                 <li class="menu-item">
-                    <a href="javascript:void(0);" class="menu-link" >
-                        <i class="menu-icon tf-icons bx  bx-credit-card"></i>
-                        <div data-i18n="Dashboard">Pago</div>
+                    <a href="pago.html" class="menu-link">
+                      <i class="menu-icon tf-icons bx bx-credit-card"></i>
+                      <div data-i18n="Pago">Pago</div>
                     </a>
                 </li>
                 <!-- Chat -->
@@ -156,7 +156,7 @@
                         </a>
                       </li>
                       <li class="menu-item">
-                        <a href="reseñas.html" class="menu-link">
+                        <a href="resenas.html" class="menu-link">
                           <div data-i18n="Reseñas">Reseñas</div>
                         </a>
                       </li>
